[tool.poetry]
name = "image-dispatcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "image_dispatcher"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
streamlit = "^1.28.1"
pillow-heif = "^0.13.1"
ipykernel = "^6.26.0"
black = "^23.10.1"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
